# tiny-rust-demo

./: .cirrus.yml  .gitignore  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md  build.sh  elf.s  script.ld  tinyrust.rs
.cargo/: config
