[package]
name = "tiny-rust-executable"
version = "0.5.0"
authors = [
    "Keegan McAllister <mcallister.keegan@gmail.com>",
    "Melvin Kicchi <melvin@likes.pounc.es>",
    "Hiroki Noda <kubo39@gmail.com>",
    "Torbjørn Birch Moltu <t.b.moltu@lyse.net>"
]
license = "Apache-2.0 OR MIT"
edition = "2015"

[lib]
name = "tinyrust"
path = "tinyrust.rs"

[profile.dev]
opt-level = "z"
overflow-checks = false
lto = false
panic = "abort"

[profile.release]
opt-level = "z"
overflow-checks = false
lto = false # enabling LTO breaks objdump and requires other flags to ld
panic = "abort"

[dependencies]
# fork of https://github.com/japaric/syscall.rs (sc 0.2.2) with updated feature flags
sc = {git = "https://github.com/AgustinCB/syscall.rs/"}
